Fix about layout spacing

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -457,7 +457,7 @@ http://www.templatemo.com/tm-515-eatery
   }
 
   .about-image {
-    position: absolute;
+    position: relative;
   }
 
 
